[package]
name = "obsdn"
version = "0.1.0"
authors = ["Richard Chien <richardchienthebest@gmail.com>"]
edition = "2018"

[dependencies]
tun = { git = "https://github.com/meh/rust-tun.git", rev = "19906c0", features = ["async"] }
packet = "0.1"
futures = "0.3"
hex = "0.4"
tokio-tungstenite = "0.14"
tokio = { version = "1.5", features = ["full"] }
url = "2.2"
serde_json = "1.0"
