[package]
name = "obtunnel"
version = "0.1.0"
authors = ["Richard Chien <richardchienthebest@gmail.com>"]
edition = "2018"

[dependencies]
tun = { git = "https://github.com/meh/rust-tun.git", rev = "19906c0", features = ["async"] }
packet = "0.1"
futures = "0.3"
hex = "0.4"
tokio-tungstenite = "0.14"
tokio = { version = "1.5", features = ["full"] }
tokio-util = "0.6"
url = "2.2"
serde_json = "1.0"
base64 = "0.13"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
